[gd_scene load_steps=2 format=3 uid="uid://2f7b81idd5lx"]

[ext_resource type="Script" path="res://scripts/ui/popups/node_details_popup.gd" id="1_yvmqe"]

[node name="NodeDetailsPopup" type="Window"]
title = "节点详情"
initial_position = 2
size = Vector2i(400, 500)
exclusive = true
script = ExtResource("1_yvmqe")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NodeIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "节点描述"
horizontal_alignment = 1
autowrap_mode = 3

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "难度: 普通"
horizontal_alignment = 1

[node name="RewardsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "奖励: 金币 x 100"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "关闭"
